Fix dumb spacing

--- a/styles/header.scss
+++ b/styles/header.scss
@@ -11,7 +11,7 @@
 
     flex-wrap: wrap;
     align-items: flex-start;
-    margin-bottom: 0;
+    margin-bottom: 1rem;
     column-gap: 1rem;
 
     &>#title-block {
